# pi

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  permissions.yaml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
agents/: build.md  execution.md  ideation.md  index.html  plan.md  review:docs:dev.md  review:docs:user.md  settings.json  testing.md
agents/explanation/architecture/: index.html
agents/how-to/create-workflow/: index.html
agents/how-to/install/: index.html
agents/how-to/switch-agents/: index.html
agents/reference/commands/: index.html
agents/reference/subagent-frontmatter/: index.html
agents/reference/workflow-yaml/: index.html
agents/tutorial/getting-started/: index.html
docs/: index.md  litellm.md  openai.md
hitl/: index.html
hitl/explanation/architecture/: index.html
hitl/how-to/allow-harmless-tools/: index.html
hitl/how-to/handle-mcp-cli-calls/: index.html
hitl/reference/cel-variables/: index.html
hitl/reference/commands/: index.html
hitl/reference/config-schema/: index.html
hitl/tutorials/getting-started/: index.html
prompts/: create-prompt.md  plan.md  review:docs:user.md
search/: search_index.json
stylesheets/: extra.css
web/: index.html
workflows/: wrk.yaml  wrk.yml
