[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-docs"
version = "0.1.0"
description = "Pi Documentation Hub — Aggregated documentation for the Pi ecosystem"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-multirepo-plugin>=0.6.0",
]
